--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,8 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
+    // Database libs
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor 'android.arch.persistence.room:compiler:2.2.5'
+
 }
